--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "cordova-plugin-screen-orientation": "^2.0.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
+    "firebase": "^4.3.0",
+    "angularfire2": "^4.0.0-rc.2",
     "es6-promise-plugin": "^4.1.1",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
