--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
+    "angularfire2": "^5.0.0-rc.4",
+    "firebase": "4.8.0",
     "cordova-android": "^6.4.0",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
@@ -34,8 +36,6 @@
     "cordova-plugin-screen-orientation": "^2.0.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
-    "firebase": "^4.3.0",
-    "angularfire2": "^4.0.0-rc.2",
     "es6-promise-plugin": "^4.1.1",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
