--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-googleplus": "^5.1.1",
+    "cordova-plugin-googleplus": "^5.2.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-screen-orientation": "^2.0.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.1.5",
+    "cordova-sqlite-storage": "^2.2.0",
     "es6-promise-plugin": "^4.2.2",
     "firebase": "4.8.0",
     "ionic-angular": "3.7.1",
@@ -46,7 +46,8 @@
     "ng2-validation": "^4.2.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-browser": "~5.0.3"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -68,7 +69,8 @@
       }
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
