--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@ionic-native/camera": "^4.3.3",
     "@ionic-native/core": "^4.5.2",
     "@ionic-native/google-plus": "^4.5.2",
+    "@ionic-native/network": "^4.5.2",
     "@ionic-native/screen-orientation": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "^6.4.0",
+    "cordova-browser": "~5.0.3",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
@@ -46,8 +48,7 @@
     "ng2-validation": "^4.2.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-browser": "~5.0.3"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
