--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
     "@ionic-native/camera": "^4.3.3",
     "@ionic-native/core": "^4.5.2",
     "@ionic-native/google-plus": "^4.5.2",
+    "@ionic-native/native-storage": "^4.5.2",
     "@ionic-native/screen-orientation": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "^6.4.0",
+    "cordova-browser": "~5.0.3",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-googleplus": "^5.2.0",
+    "cordova-plugin-googleplus": "^5.2.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-nativestorage": "^2.2.2",
     "cordova-plugin-screen-orientation": "^2.0.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -46,8 +49,7 @@
     "ng2-validation": "^4.2.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-browser": "~5.0.3"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -64,7 +66,11 @@
       "cordova-plugin-camera": {},
       "cordova-plugin-screen-orientation": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "myreversedclientid"
+      },
+      "cordova-plugin-nativestorage": {}
     },
     "cordova-plugin-googleplus": {
       "REVERSED_CLIENT_ID": "myreversedclientid"
