--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@ionic-native/camera": "^4.3.3",
     "@ionic-native/core": "^4.5.2",
     "@ionic-native/google-plus": "^4.5.2",
+    "@ionic-native/network": "^4.5.2",
+    "@ionic-native/onesignal": "^4.5.2",
     "@ionic-native/screen-orientation": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "^6.4.0",
+    "cordova-browser": "~5.0.3",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
@@ -44,10 +47,10 @@
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "ng2-validation": "^4.2.0",
+    "onesignal-cordova-plugin": "^2.2.5",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-browser": "~5.0.3"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -64,7 +67,8 @@
       "cordova-plugin-camera": {},
       "cordova-plugin-screen-orientation": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "onesignal-cordova-plugin": {}
     },
     "cordova-plugin-googleplus": {
       "REVERSED_CLIENT_ID": "myreversedclientid"
